HCI paper 1 update

--- a/Relational Distancing and Termination between Online Friends An Application of the Investment Model/Paper-one-review.tex
+++ b/Relational Distancing and Termination between Online Friends An Application of the Investment Model/Paper-one-review.tex
@@ -30,13 +30,15 @@ Does it raise questions about accepted ways of understanding an issue, what is t
 How would readers think differently after reading the article
 How might it be used in other work
 
+Expanding the investment model to be used for online networks rather than just offline ones.
 
 \section{Justification of Conclusions}
 In this section the way in which \cite{Carpenter} justifies the conclusions reached in the paper is critiqued. The first conclusion made is that a primary user is less likely to permanently cut ties with an annoyer. The more permanent the method to ignore the annoyer the less likely the primary user is to enact on it. This trend can be seen quite easily in the table that has collated all of the results from the questionnaire. They also use a ANOVA test to prove that the trend is linear and statistically significant. 
 The next conclusion made was that the GE narcissism was related to the annoyers reports of their own behaviour. That is to say that annoyers generally exhibit GE narcissism which is the reason for posting self centred content. The paper claims that the responses given substantially support this hypothesis however the questionnaire given to the annoyers was measured such that a narcissistic reply was measured as one and a non-narcissistic reply was measured as zero. In the results the mean score for the annoyers was 0.4 which suggests that for the annoyers to substantially exhibit GE narcissism traits it would as least be over 0.5. Maybe there is more to the annoyers posting self-centred content than the paper claims. 
 Another claim was that the primary users satisfaction with the friendship of the annoyer would be negatively related to the annoyers posting behaviour increasing. The results reported in the paper support this claim with a negative correlation of -0.34. There are no raw data values in the paper so the calculations that the writers have done are assumed to be correct.
 The following claims by the paper are all in relation to the investment model and applying it to Facebook friends. The results reported support all of the claims made by \cite{Carpenter}. These are as follows; satisfaction with a friendship is positively related to the commitment of the friendship, investment in a friendship is positively associated with commitment to the friendship, the perceived quality of the primary users network of friends would be positively related to the assessments of other alternatives to the friends, the quality of alternatives would be negatively related to the commitment of the current friendships, commitment to friendships would be negatively related to intentions of unfriending, hiding and skipping the individuals content. 
-However even though the data reported supported these findings when a model fit was used to test the paths of the hypothesised investment model for Facebook friends corrections had to be made. 
+However even though the data reported supported these findings when a model fit was used to test the paths of the hypothesised investment model for Facebook friends corrections had to be made. The reasons given for the adjustments to the hypothesised investment model were not justified adequately. The removal of these does not seem to have done with much testing. The reasons given are good arguements for removing them however reasons for the others not being removed are not given. This is necessary to convince the reader that the selection wasn't random and what fits. There could be other combinations that make the model fit.
+The results gathered were also done so using a questionnaire. As the the authors suggest the reported behaviour of the primary users may not be accurate. The primary users should be monitored when using Facebook to accurately observe their behaviour when using Facebook.
 
 Were the adjustments made to the hypothesised investment model justified appropriately?
 
@@ -47,12 +49,14 @@ After both of these variables were removed the model fits.
 Talk about the method used to obtain results. The paper uses a questionnaire to gather information on users behaviour to annoyers. Maybe the behaviour could be observed rather than quizzed. 
 
 \section{Further Work}
-Research investigating the association of the investment model (IM) variables to the nuances of passive versus active behaviours is needed
-Research how annoyers respond to the primary users using distancing tactics on their posts and judging them for what they post
+The authors of the article suggest much future work that can be carried out by other researchers. This includes researching the differeces between active and passive behaviours when using Facebook and how they may affect the investment model. There is discussion on how some primary users may passively skip over annoyers content and others may browse Facebook passively all of the time only actively stopping when a post stands out. Another future research suggested is how annoyers react to primary users use of different distancing tactics. Due to the large number of connections that Facebook encourages, the annoyers may not realise that primary users are seeing the content that they post online, maybe the annoyers don't realise that the primary users are reacting and judging their content. Research into how annoyers respond to the primary users seeing their posts may cause a change of behaviour or maybe the annoyers use their own distancing techniques on the primary users. 
+Investment variable should be researched more to see if there are any antecedent variables that incorporate into the model.
+More suggested future research is the distancing tactics used for people that are close or distant ties. Depending on how close the annoyer is to them outside of Facebook may play a bigger role on how permanent the distancing tactics are used. If the primary user is more likely to see the annoyer offline then maybe tactics used will be different.
+The article only uses questionnaires to measure the intended behaviour of the primary user. To expand on this study the actual behaviour of the primary users could be observed while they are browsing Facebook. This will give a more accurate result of what primary users actually do when faced with annoyers posts. Another expansion of the paper could be to do a more focused study on the annoyers and the reasons behind their posts. The article puts it down to narcissistic tendencies but as discussed above there isn't enough evidence for this to be definitive for all annoying users. The number of annoyers that were used in this study was smaller than the number of primary users, having more annoyers may reveal different reasons behind the posts.
+With the amount of social networking sites that there are research could be performed on how users use the distancing tactics differently on these sites when faced with an annoyer. There may be different tactics that primary users use to distance themselves from annoyers. 
+
 Research more factors that encourage distancing over termination
-Offline factors may play a part in distancing or terminating a friend
-Intent measured rather than actual behaviour need to measure actual behaviour
-Do a larger study on the annoyers. Only a small amount of them were surveyed. Behaviour was put down as narcissistic but not a lot of evidence to support this
+
 \cite{Carpenter}
 
 \bibliographystyle{agsm}
