Final additions made

--- a/Error Recovery in Multitasking While Driving/paper-two-writeup.tex
+++ b/Error Recovery in Multitasking While Driving/paper-two-writeup.tex
@@ -14,7 +14,7 @@
   \addtocontents{toc}{\small}
   \addtocontents{lof}{\small}
 }
-\title{Error Recovery in Multitasking While Driving}
+\title{A review of Error Recovery in Multitasking While Driving}
 \author{William Ewart}
 \date{April 2017}
 
@@ -26,21 +26,19 @@
 \newpage
 
 \section{Contribution}
-Emphasis on recovering from errors rather than preventing errors.
-Show that error recovery is just as important as error prevention. Can't prevent all errors so for a driver to easily recover from them keeps there attention on the road to prevent them from causing an accident or not seeing vital information. 
-No mention of how individual circumstances may affect the drivers abilities to achieve the tasks that they were asked to do. \cite{Janssen}
-\cite{Jin} shows seven different strategies of self-interruption, the method in this is using a self-interrupting type to gather data. The types that are potentially being used are the routine and recollection ones. Results from this paper give some more consequences of these strategies. Further questions arise from the results of both of these papers. \cite{Jin} suggests that the types of self-interruption are only used when someone is focusing on the primary task. However in the case of \cite{Lee} the drivers may also be using these self-interruption types identified to stop focusing on the secondary task and instead refocus on the primary task of following the car in front. Questions on whether primary tasks are the only ones that can be interrupted from and for cases such as \cite{Lee} maybe both tasks are of equal importance to the driver.
-
-Questions about the way in which users prioritise tasks can be formed from the results of this paper. For example which task does the driver consider primary in this experiment? 
+This paper opens up more questions about multitasking and driving as well as with how users split their attention between tasks. Emphasis is put on how users recover from errors rather than how a system can be designed to prevent errors which differs from current literature. Not all systems can be built to be 100\% error proof so the way in which a user can recover from an error is important and something that designers of systems should be aware of. The paper shows that users errors can easily be made and depending on how they can recover from such an error affects the time that they are focused on recovering than from the main task of driving in this case. This is very important for driving as generally more time spent recovering from the error means less time focusing on the road and what is happening in their surroundings. It is  shown that certain designs are more likely to promote strategies that maximises the attention on the road compared to recovering from an error. More time concentrating on the road means a driver is more able to spot changes and as a result potentially prevent accidents. \\
+There are no breakdowns of how different demographics performed in the experiment and how the strategies they adopted were different. Effort was made to select participants from different age groups but no comparisons were made between them. Even if there were no distinguishing results it would still have been useful to the wider field to see this. An example is \cite{Janssen} who did a similar study where participants completed a primary and secondary task and focused on the differences between the groups and demographics of them. Any trends from this paper on the differences between demographics may have added or countered it. \\
+\cite{Jin} shows seven different strategies of self-interruption, the method in \cite{Lee} is using self-interrupting strategies of their participants to gather data. The strategies that are most likely being used are routine and recollection. Results from \cite{Lee} give some more consequences of these strategies and how they effect different scenarios. Further questions arise from the combination of results from both papers. \cite{Jin} suggests that the types of self-interruption are only used when someone is focusing on the primary task. However in the case of \cite{Lee} the drivers may also be using these self-interruption types identified to stop focusing on the secondary task and instead refocus on the primary task of that they are meant to be doing. This suggests that the strategies put forward by \cite{Jin} can be applied to any task not just the primary one. If this is the case the question of do users make an active association of a primary task and a secondary task?
 \section{Justification of Conclusions}
-Only using a simulation, may be different results in an actual car where the risk is higher for the driver. Also the driver may be more comfortable in a real car which is familiar to them compared to a simulation. To counter this \cite{Lee} allowed the participants to practice the simulation until they were comfortable
-Switching to and from the road is reliant on an internal threshold. This is a function of glance duration, the time that they spent looking at the road before switching to the secondary task. There may be other factors affecting this decision such as confidence level, experience behind the wheel and how much the road is changing (In traffic/on a busy motorway or clear roads), although the amount of time spent looking at the road before switching intuitively seems like it plays a big role. Graph on the accumulation of information and switching to the screen isn't really backed up by the results. The exponential accumulation and then linear decay isn't explained in the text and would therefore suggest it is more of an intuitive opinion.
-Errors impair safe driving this can be seen in the results that are shown, the more errors that the drivers incurred the less time they were focusing on the road. This means that there is a higher probability of missing what is happening on the road and as a result potentially putting the driver at a higher risk of an accident. The results also show that the drivers have reduced speed and lane control which may also cause a higher risk of an accident. 
-Immediate feedback makes drivers visually focus longer on the task which can be seen in the results of the strategies used by each driver. When there was a delay they were more likely to switch back to the road after every step, whereas when there was no delay they were less likely to switch back to the road after every step. It is also suggested that the amount of visual cues that the drivers had while they were completing the secondary task allowed them to not get absorbed into the task. 
-It is also concluded that the results from this study can be extended to any multitasking situation with different options to recover from an error. The results are gathered by \cite{Lee} suggest generic strategies that were performed by the drivers. However the tasks performed were very simple and the sample size used was relatively small. This indicates that further work should be done on the study to see if the results can be replicated under different conditions such as performing more complicated tasks and having more complicated driver conditions. 
+In this section the justifications of  the conclusions that \cite{Lee} makes are critiqued. Firstly they are only using a simulation, so reults from real world testing may be different where the risk is higher for the driver. The driver may also feel more comfortable in a real car which is familiar rather than a simulation which is completely new. To counter this \cite{Lee} allowed the participants to practice the simulation until they were comfortable and once they were commenced the experiment. \\
+They conclude that switching to and from the road is reliant on an internal threshold and is a function of glance duration which is defined as the time that the driver spent looking at the road before switching to the secondary task. There may also be other factors affecting this decisions to switch from looking at the road to the secondary task. These include confidence level, experience behind the wheel and how much the road is changing (In traffic/on a busy motorway or clear roads). Although the amount of time spent looking at the road before switching intuitively seems like it plays a big role. Graph on the accumulation of information and switching to the secondary task screen isn't backed up by the results. The exponential accumulation and then linear decay isn't explained in the text and would therefore suggest it is more of an opinion. \\
+Another conclusion made is that errors impair safe driving this can be seen in the results that are shown, the more errors that the drivers incurred the less time they were focusing on the road. This means that there is a higher probability of missing what is happening on the road and as a result potentially putting the driver at a higher risk of an accident. The results also show that the drivers have reduced speed and lane control which may also cause a higher risk of an accident as their driving performance is impaired. 
+Immediate feedback makes drivers visually focus longer on the task which can be seen in the results of the strategies used by each driver. When there was a delay they were more likely to switch back to the road after every step, whereas when there was no delay they were less likely to switch back to the road after every step. It is therefore suggested that the amount of visual cues that the drivers had while they were completing the secondary task allowed them to not get absorbed into it. \\
+It is also concluded that the results from this study can be extended to any multitasking situation with different options to recover from an error. The results that are gathered by \cite{Lee} suggest generic strategies that were performed by the drivers. However the tasks performed were very simple and the sample size used was relatively small. This indicates that further work should be done to expand the study to see if the results can be replicated under different conditions such as performing more complicated tasks under worse driving conditions. 
 \section{Further Work}
-No further work is suggested in the paper written by \citep{Lee} even though there are multiple extensions to their current research. One immediate expansion of their research would be to test on a real life scenario to see if the strategies of the drivers change or if there are any new ones that appear. However the way in which this experiment would be carried out so that no danger would come to those performing the experiment and to the general public would need more thought. Another extension that \citep{Lee} don't draw attention to is how the strategies differ between demographics. Are younger and more technology confident individuals more likely to adopt different strategies than older individuals that may be less confident. The ability of the participants to use an electronic keyboard may also have an impact as well on the strategies used and the time taken to compete tasks. 
-The task performed by each driver was relatively simple and conducted under simple conditions (Following a car in front of them). If the task or the driver conditions were more complex adoption of strategies may be different and there could be other strategies that the drivers use under these more complicated conditions. A simple change for this could be varying the speed of the car in front or having it change lanes occasionally. This would prevent the driver from getting into a routine where they check the road for a set time do the task for a set and so on. 
+No further work is suggested in the paper written by \cite{Lee} even though there are multiple extensions to their current research that could be carried out. This may show that the authors are being overzealous by thinking that their research doesn't need to be expanded upon or they don't want it to be expanded upon. \\
+One immediate expansion of their research would be to test on a real life scenario to see if the strategies of the drivers change or if there are any new ones that appear. However the way in which this would be carried out so that no danger would come to those taking part in the experiment and to the general public would need more thought. Another extension that \cite{Lee} don't draw attention to is how the strategies differ between demographics. Are younger and more technology confident individuals more likely to adopt different strategies than older individuals that may be less confident in their technological skills. The ability of the participants to use an electronic keyboard may also have an impact as well on the strategies used and the time taken to compete tasks. \\
+The task performed by each driver was relatively simple and conducted under simple conditions (Following a car in front of them). If the task or the driving conditions were more complex strategies may be different and new strategies may be found that the drivers use under these difficult conditions. A simple change for this could be varying the speed of the car in front or having it change lanes occasionally. This would prevent the driver from getting into a routine where they check the road for a set time, do the task for a set time and so on. \\
 Another change that could be tested other than the delay of words being typed could be screen size. This may have the same impact as the delay in words being typed and similar or different strategies could be adopted when the screen size is varied.
 \bibliographystyle{agsm}
 \bibliography{bibliography}
