--- a/Relational Distancing and Termination between Online Friends An Application of the Investment Model/Paper-one-review.tex
+++ b/Relational Distancing and Termination between Online Friends An Application of the Investment Model/Paper-one-review.tex
@@ -25,39 +25,24 @@
 \end{titlingpage}
 \newpage
 \section{Contribution}
-Does the article add new information to the body of knowledge on the topic. What implication does the information have for how the topic is understood
-Does it raise questions about accepted ways of understanding an issue, what is the most important question
-How would readers think differently after reading the article
-How might it be used in other work
-
-Expanding the investment model to be used for online networks rather than just offline ones.
+The paper written by \cite{Carpenter} expands the investment model from \cite{Rusbult} to Facebook and online relationships. However the participants were only asked about their behaviour on Facebook and not on other social networking sites. Because of this the results cannot be taken as generic to all social networking sites available. Results presented show that investment is problematic in the online version of the investment model and needs to be looked at again. This shows that Facebook allows users to have many connections with little to no investment put into the relationship. This may not be the case for other sites because of the facts mentioned above. \\
+The paper focuses on the negative effects of maintaining friendships with those that you find write and share annoying posts on Facebook. The results show that rather than permanently ending a friendship users would rather skip the posts when they reach them on their news feed. \cite{Carpenter} gives some possible reasoning behind this which is logical but asks the question why a user would expose themselves to the annoying users and what would it take to permanently end the friendship. Following this a question that \cite{Carpenter} proposes is when are users motivated to terminate such a friendship, however they fail to answer this question sufficiently still leaving open what the motivations would be to terminate a friendship on Facebook. This also begs the question is the user behaviour similar on other social networking websites and are the strategies offered to ignore these annoyers different and if how. \\
+Generally \cite{Carpenter} opens up more questions than they answer and due to the participants only being from universities in America doesn't give an accurate representation of how all users may react to annoyers. Very few older people were asked about this as well so there can't be any comparisons between age demographics. This paper opens up more questions than it answers and doesn't contribute much in the way of definite conclusions on the subject matter. 
 
 \section{Justification of Conclusions}
-In this section the way in which \cite{Carpenter} justifies the conclusions reached in the paper is critiqued. The first conclusion made is that a primary user is less likely to permanently cut ties with an annoyer. The more permanent the method to ignore the annoyer the less likely the primary user is to enact on it. This trend can be seen quite easily in the table that has collated all of the results from the questionnaire. They also use a ANOVA test to prove that the trend is linear and statistically significant. 
-The next conclusion made was that the GE narcissism was related to the annoyers reports of their own behaviour. That is to say that annoyers generally exhibit GE narcissism which is the reason for posting self centred content. The paper claims that the responses given substantially support this hypothesis however the questionnaire given to the annoyers was measured such that a narcissistic reply was measured as one and a non-narcissistic reply was measured as zero. In the results the mean score for the annoyers was 0.4 which suggests that for the annoyers to substantially exhibit GE narcissism traits it would as least be over 0.5. Maybe there is more to the annoyers posting self-centred content than the paper claims. 
-Another claim was that the primary users satisfaction with the friendship of the annoyer would be negatively related to the annoyers posting behaviour increasing. The results reported in the paper support this claim with a negative correlation of -0.34. There are no raw data values in the paper so the calculations that the writers have done are assumed to be correct.
-The following claims by the paper are all in relation to the investment model and applying it to Facebook friends. The results reported support all of the claims made by \cite{Carpenter}. These are as follows; satisfaction with a friendship is positively related to the commitment of the friendship, investment in a friendship is positively associated with commitment to the friendship, the perceived quality of the primary users network of friends would be positively related to the assessments of other alternatives to the friends, the quality of alternatives would be negatively related to the commitment of the current friendships, commitment to friendships would be negatively related to intentions of unfriending, hiding and skipping the individuals content. 
-However even though the data reported supported these findings when a model fit was used to test the paths of the hypothesised investment model for Facebook friends corrections had to be made. The reasons given for the adjustments to the hypothesised investment model were not justified adequately. The removal of these does not seem to have done with much testing. The reasons given are good arguements for removing them however reasons for the others not being removed are not given. This is necessary to convince the reader that the selection wasn't random and what fits. There could be other combinations that make the model fit.
-The results gathered were also done so using a questionnaire. As the the authors suggest the reported behaviour of the primary users may not be accurate. The primary users should be monitored when using Facebook to accurately observe their behaviour when using Facebook.
-
-Were the adjustments made to the hypothesised investment model justified appropriately?
-
-First model had a poor fit with the data
-Modifications made to it the first being the intent to skip outcome. The relationship between it and commitment was lower than first thought. It was more related to the extent that the annoyer produced self focused messages. Not what the model predicted at first
-Investment was also identified as problematic with the model. It does not play as large a role in computer communication and was removed.
-After both of these variables were removed the model fits.
-Talk about the method used to obtain results. The paper uses a questionnaire to gather information on users behaviour to annoyers. Maybe the behaviour could be observed rather than quizzed. 
+This section critques the way in which \cite{Carpenter} justifies the conclusions reached in the paper. Firstly \cite{Carpenter} concludes that a primary users are less likely to permanently cut ties with an annoyer. The more permanent the method to ignore the annoyer the less likely the primary user is to enact on it. This trend can be seen in the table with the results from the questionnaire answered by participants. \cite{Carpenter} uses an ANOVA test to prove that the trend is linear and statistically significant. \\
+The next conclusion made was that the GE narcissism was related to the annoyers reports of their own behaviour. That is to say that annoyers generally exhibit GE narcissism which is the reason for posting self centred content. The paper claims that the responses given substantially support this hypothesis however from the results of the questionnaire given to the annoyers the mean score was calculated as 0.4 which suggests that the authors are exaggerating their results for this particular conclusion. You would expect for this to be substantial it would as least be over 0.5. The answers where a narcissistic reply was recorded was equivalent to one and a non-narcissistic reply was equivalent to zero. Maybe there is more to the annoyers posting self-centred content than the paper claims. \\
+Another conclusion was the primary users satisfaction with the friendship of the annoyer would be negatively related to the annoyers annoying posting behaviour increasing. The results reported in the paper support this claim with a negative correlation of -0.34. Consequently there are no raw data values in the paper so the calculations that the writers have done are assumed to be correct.
+The following conclusions by \cite{Carpenter} are all in relation to the investment model and applying it to Facebook friends. The reported results support all of the claims made by \cite{Carpenter}. These are as follows; satisfaction with a friendship is positively related to the commitment of the friendship, investment in a friendship is positively associated with commitment to the friendship, the perceived quality of the primary users network of friends would be positively related to the assessments of other alternatives to the friends, the quality of alternatives would be negatively related to the commitment of the current friendships, commitment to friendships would be negatively related to intentions of unfriending, hiding and skipping the individuals content. \\
+However even though the data reported supported these findings when a model fit was used to test the paths of the hypothesised investment model for Facebook friends corrections had to be made. The reasons given for the adjustments to the hypothesised investment model were not justified adequately. The removal of the variables have no reported testing that the authors may have carried out. There are good arguments for removing the variables however there are none in favour of keeping the others. This is necessary to convince the reader that the selection wasn't random and what fits their desired model. There could be other combinations that make the model fit. \\
+The results gathered were also done so using a questionnaire. As the the authors suggest the reported behaviour of the primary users may not be accurate. The primary users should be monitored when using Facebook to accurately observe their behaviour when using Facebook. The demographics of the participants also skews towards younger users at American colleges quite heavily and results could differ if demographics change to an older and more culturally even one.
 
 \section{Further Work}
-The authors of the article suggest much future work that can be carried out by other researchers. This includes researching the differeces between active and passive behaviours when using Facebook and how they may affect the investment model. There is discussion on how some primary users may passively skip over annoyers content and others may browse Facebook passively all of the time only actively stopping when a post stands out. Another future research suggested is how annoyers react to primary users use of different distancing tactics. Due to the large number of connections that Facebook encourages, the annoyers may not realise that primary users are seeing the content that they post online, maybe the annoyers don't realise that the primary users are reacting and judging their content. Research into how annoyers respond to the primary users seeing their posts may cause a change of behaviour or maybe the annoyers use their own distancing techniques on the primary users. 
-Investment variable should be researched more to see if there are any antecedent variables that incorporate into the model.
-More suggested future research is the distancing tactics used for people that are close or distant ties. Depending on how close the annoyer is to them outside of Facebook may play a bigger role on how permanent the distancing tactics are used. If the primary user is more likely to see the annoyer offline then maybe tactics used will be different.
-The article only uses questionnaires to measure the intended behaviour of the primary user. To expand on this study the actual behaviour of the primary users could be observed while they are browsing Facebook. This will give a more accurate result of what primary users actually do when faced with annoyers posts. Another expansion of the paper could be to do a more focused study on the annoyers and the reasons behind their posts. The article puts it down to narcissistic tendencies but as discussed above there isn't enough evidence for this to be definitive for all annoying users. The number of annoyers that were used in this study was smaller than the number of primary users, having more annoyers may reveal different reasons behind the posts.
-With the amount of social networking sites that there are research could be performed on how users use the distancing tactics differently on these sites when faced with an annoyer. There may be different tactics that primary users use to distance themselves from annoyers. 
-
-Research more factors that encourage distancing over termination
-
-\cite{Carpenter}
+\cite{Carpenter} suggest a lot of future work that can be carried out by other researchers and expand on their paper. This includes researching the differences between active and passive behaviours when using Facebook and how they may affect the investment model. There is discussion on how some primary users may passively skip over annoyers content and others may browse Facebook passively all of the time only actively stopping to look at a post when it stands out. More future research suggested is how annoyers react to primary users use of different distancing tactics which are not permanent. The effects of permanent tactics has been research by \cite{Bevan}. Due to the large number of connections that Facebook encourages, the annoyers may not realise that primary users are seeing the content that they post online, maybe the annoyers don't realise that the primary users are reacting and judging their content. Research into how annoyers respond to the primary users seeing and reacting to their posts may cause a change of behaviour or maybe the annoyers will use the distancing tactics on the primary users. \\
+\cite{Carpenter} also suggest that more research should be done on the removal of the investment variable from their current online investment model to see if there are any antecedent variables that would fit.
+Further research suggested is to find if there are any differences in the distancing tactics used for people that are close or distant ties online. Depending on how close the annoyer is to the primary user outside of Facebook may play a bigger role on how permanent distancing tactics are used if at all.
+The paper only uses a questionnaire to measure the intended behaviour of the primary user. Observing the actual behaviour of the primary user while using Facebook would expand on this and give a more accurate representation of what primary users actually do when viewing annoyers posts. \\
+Another expansion of the paper could be to do a more focused study on the annoyers and the reasons behind their posts. The article puts it down to narcissistic tendencies but as discussed above there isn't enough evidence for this to be definitive for all annoying users. The number of annoyers that were used in this study was smaller than the number of primary users, having more annoyers may reveal different causes for the posts. Finally with the amount of social networking sites that there are currently, research could be performed on how users use distancing tactics differently on these sites when faced with an annoyer. There may be different tactics that primary users use to distance themselves from annoyers on different social networking websites. 
 
 \bibliographystyle{agsm}
 \bibliography{bibliography}
