--- a/Relational Distancing and Termination between Online Friends An Application of the Investment Model/bibliography.bib
+++ b/Relational Distancing and Termination between Online Friends An Application of the Investment Model/bibliography.bib
@@ -14,5 +14,28 @@ acmid = {3026026},
 publisher = {ACM},
 address = {New York, NY, USA},
 keywords = {investment model, narcissism, relational termination, social network websites, unfriending},
-} 
+}
 
+@article{Rusbult,
+title = "Commitment and satisfaction in romantic associations: A test of the investment model",
+journal = "Journal of Experimental Social Psychology",
+volume = "16",
+number = "2",
+pages = "172 - 186",
+year = "1980",
+issn = "0022-1031",
+doi = "https://doi.org/10.1016/0022-1031(80)90007-4",
+url = "http://www.sciencedirect.com/science/article/pii/0022103180900074",
+author = "Caryl E Rusbult"
+}
+
+@article{Bevan,
+  title={Negative emotional and cognitive responses to being unfriended on Facebook: An exploratory study},
+  author={Bevan, Jennifer L and Pfyl, Jeanette and Barclay, Brett},
+  journal={Computers in Human Behavior},
+  volume={28},
+  number={4},
+  pages={1458--1464},
+  year={2012},
+  publisher={Elsevier}
+}
